handling desktop and mobile layouts 'better' not hiding the scrollbar, but everything else works. added mainlayout: height:min-content, but root has a min height of 100vh and the correct background color

--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,12 @@
-@import './styles/layouts/desktoplayout.css';
-@import './styles/auth/signin.css';
-@import './styles/auth/signup.css';
+@import "./styles/layouts/desktoplayout.css";
+@import "./styles/auth/signin.css";
+@import "./styles/auth/signup.css";
 
-:root{
+:root {
   --lg-gap: 1rem;
   --sm-gap: 0.5rem;
 }
 
-
 .main-layout {
-  height: 100%;
+  height: min-content;
 }
