--- a/src/main.css
+++ b/src/main.css
@@ -8,13 +8,22 @@ body,
 html {
   padding: 0;
   margin: 0;
-}
-
-body {
-  overflow: hidden; /* Hide scrollbars */
+  height: 100%;
+  background-color: #303030;
 }
 
 #root {
-  height: 100vh;
   width: 100%;
+  height: 100%;
+}
+
+#root::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for Internet Explorer, Edge and Firefox */
+
+#root {
+  -ms-overflow-style: none; /* Internet Explorer and Edge */
+  scrollbar-width: none; /* Firefox */
 }
